# skillforge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: LAUNCH_PLAYBOOK.md  LAUNCH_PLAYBOOK.zh-CN.md  LAUNCH_POSTS.md  LAUNCH_POSTS.zh-CN.md  RUNTIME_COMPATIBILITY.md  RUNTIME_COMPATIBILITY.zh-CN.md  TUTORIAL.md  TUTORIAL.zh-CN.md
examples/: CLAUDE_SHOWCASE.md  CLAUDE_SHOWCASE.zh-CN.md  CODEX_SHOWCASE.md  CODEX_SHOWCASE.zh-CN.md  HERMES_SHOWCASE.md  HERMES_SHOWCASE.zh-CN.md  OPENCLAW_SHOWCASE.md  OPENCLAW_SHOWCASE.zh-CN.md  SCRAPLING_REPORT.json  SCRAPLING_REPORT.md  SCRAPLING_SHOWCASE.md  SCRAPLING_SHOWCASE.zh-CN.md
scripts/: generate_example_reports.py
skills/skillforge-repo-to-skill/: SKILL.md
src/skillforge/: analyzer.py  cli.py  doctor.py  generator.py  models.py  packager.py  reporting.py  utils.py  verifier.py
tests/: test_analyzer.py  test_cli.py  test_doctor.py  test_packager.py  test_reporting.py  test_verifier.py
