[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillforge-agent"
version = "0.1.0"
description = "Turn GitHub repositories into audited, portable agent skills."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "SkillForge contributors" }
]
keywords = [
  "agent-skills",
  "github",
  "claude",
  "codex",
  "copilot",
  "openclaw",
  "hermes",
  "repo-to-skill"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Documentation"
]

[project.urls]
Homepage = "https://github.com/xiaokillua/skillforge"
Documentation = "https://github.com/xiaokillua/skillforge#readme"
Issues = "https://github.com/xiaokillua/skillforge/issues"

[project.scripts]
skillforge = "skillforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
