[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillforge-agent"
version = "0.3.0"
description = "Compile GitHub repositories into audited, portable agent skills."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "SkillForge contributors" }
]
keywords = [
  "agent-skills",
  "github",
  "claude",
  "codex",
  "copilot",
  "openclaw",
  "hermes",
  "repo-to-skill",
  "claude-code",
  "ai-agents"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Documentation"
]

[project.urls]
Homepage = "https://github.com/xiaokillua/skillforge"
Documentation = "https://github.com/xiaokillua/skillforge#readme"
Issues = "https://github.com/xiaokillua/skillforge/issues"
Changelog = "https://github.com/xiaokillua/skillforge/blob/main/CHANGELOG.md"
Tutorial = "https://github.com/xiaokillua/skillforge/blob/main/docs/TUTORIAL.md"
Security = "https://github.com/xiaokillua/skillforge/blob/main/SECURITY.md"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "twine>=5.1.1",
]

[project.scripts]
skillforge = "skillforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
